--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>vue-ts-starter</title>
     </head>
-
+    <!-- <script defer src="//unpkg.com/@element-plus/icons-vue"></script> -->
     <body>
         <div id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
+    
 </html>
